--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quiz-master",
   "version": "1.0.0",
   "description": "A comprehensive quiz creator web application",
+  "homepage": "https://tultuldey128.github.io/quiz-master",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.26.8",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "gh-pages": "^6.3.0"
   }
 }
